--- a/.build_markdown/title.sty
+++ b/.build_markdown/title.sty
@@ -1,3 +1,8 @@
+%
+\usepackage{graphicx}
+\let\Oldincludegraphics\includegraphics
+\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.8\maxwidth]{#1}}
+
 % Recepte, lai labi izvietotu figūras
 \usepackage{float}	
 \usepackage{afterpage}
@@ -32,7 +37,7 @@
  
 
 \usepackage{csvsimple}
-\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.7\maxwidth]{#1}}
+%\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.7\maxwidth]{#1}}
 \makeatletter
 
 \renewcommand{\maketitle}{
@@ -49,6 +54,7 @@
 		\end{flushright}
 		\end{minipage}
 	\begin{minipage}[c]{3cm}
+		%\includegraphics{LU_logo.pdf}
 		\Oldincludegraphics[height=2.7cm]{.build_markdown/LU_logo.pdf} % Norādu absalūto vietu
 	\end{minipage}
 	\end{flushright}
