Novērsta problēma ar grafiku pievienošanu

--- a/.build_markdown/title.sty
+++ b/.build_markdown/title.sty
@@ -1,6 +1,12 @@
 %
-\usepackage{graphicx}
-\let\Oldincludegraphics\includegraphics
+
+%lielas probleemas
+\usepackage{etoolbox}
+\ifdef{\Oldincludegraphics}{}{
+	\usepackage{graphicx}
+	\let\Oldincludegraphics\includegraphics
+}
+ 
 \renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.8\maxwidth]{#1}}
 
 % Recepte, lai labi izvietotu figūras
