--- a/.build_markdown/title.sty
+++ b/.build_markdown/title.sty
@@ -1,5 +1,3 @@
-%
-
 %lielas probleemas
 \usepackage{etoolbox}
 \ifdef{\Oldincludegraphics}{}{
@@ -8,6 +6,8 @@
 }
  
 \renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.8\maxwidth]{#1}}
+
+\usepackage{.build_markdown/content}
 
 % Recepte, lai labi izvietotu figūras
 \usepackage{float}	
@@ -24,26 +24,8 @@
 \setlength{\parindent}{1cm}
 
 
-% Ērtai grafiku veidošanai:
-\usepackage{subfigure}
 
-\newcommand{\plot}[2]{ % Bez šī varētu iztikt, ja nebūtu vajadzīgs caption virs grafika
-	\begin{figure}[!ht]
-		\caption{#2}
-		\center
-		\includegraphics{#1}
-	\end{figure}
-}
 
-\newcommand{\subplot}[2]{ % Komandas pielietojumu skatīt datormodelēšanas darbos
-	\subfigure[#2]{
-            \includegraphics[width=0.35\textwidth]{#1}
-           	}
-}
- 
-
-\usepackage{csvsimple}
-%\renewcommand{\includegraphics}[1]{\Oldincludegraphics[width=0.7\maxwidth]{#1}}
 \makeatletter
 
 \renewcommand{\maketitle}{
